[gd_scene load_steps=4 format=2]

[ext_resource path="res://graphics/ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/Options.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Pause.gd" type="Script" id=3]

[node name="Pause" type="ColorRect"]
pause_mode = 2
margin_right = 640.0
margin_bottom = 360.0
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 0.501961 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
margin_left = 224.0
margin_top = 84.0
margin_right = 416.0
margin_bottom = 276.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
margin_left = 6.0
margin_top = 4.0
margin_right = 186.0
margin_bottom = 188.0
rect_min_size = Vector2( 180, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
margin_right = 180.0
margin_bottom = 40.0
theme = ExtResource( 1 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 48.0
margin_right = 180.0
margin_bottom = 88.0
theme = ExtResource( 1 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 96.0
margin_right = 180.0
margin_bottom = 136.0
theme = ExtResource( 1 )
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 144.0
margin_right = 180.0
margin_bottom = 184.0
theme = ExtResource( 1 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
